--- a/src/main/resources/templates/skill.html
+++ b/src/main/resources/templates/skill.html
@@ -19,49 +19,49 @@
                     <tbody>
                         <tr>
                             <td class="level-label">
-                                <span class="level-badge level-basic">Basic</span>
+                                <span class="level-badge level-basis">Basis</span>
                             </td>
                             <td class="level-description">
                                 {#if skill.basicDescription}
                                     <p>{skill.basicDescription}</p>
                                 {#else}
-                                    <p><em>No description available for Basic level.</em></p>
+                                    <p><em>No description available for Basis level.</em></p>
                                 {/if}
                             </td>
                         </tr>
                         <tr>
                             <td class="level-label">
-                                <span class="level-badge level-decent">Decent</span>
+                                <span class="level-badge level-redelijk">Redelijk</span>
                             </td>
                             <td class="level-description">
                                 {#if skill.decentDescription}
                                     <p>{skill.decentDescription}</p>
                                 {#else}
-                                    <p><em>No description available for Decent level.</em></p>
+                                    <p><em>No description available for Redelijk level.</em></p>
                                 {/if}
                             </td>
                         </tr>
                         <tr>
                             <td class="level-label">
-                                <span class="level-badge level-good">Good</span>
+                                <span class="level-badge level-goed">Goed</span>
                             </td>
                             <td class="level-description">
                                 {#if skill.goodDescription}
                                     <p>{skill.goodDescription}</p>
                                 {#else}
-                                    <p><em>No description available for Good level.</em></p>
+                                    <p><em>No description available for Goed level.</em></p>
                                 {/if}
                             </td>
                         </tr>
                         <tr>
                             <td class="level-label">
-                                <span class="level-badge level-excellent">Excellent</span>
+                                <span class="level-badge level-uitstekend">Uitstekend</span>
                             </td>
                             <td class="level-description">
                                 {#if skill.excellentDescription}
                                     <p>{skill.excellentDescription}</p>
                                 {#else}
-                                    <p><em>No description available for Excellent level.</em></p>
+                                    <p><em>No description available for Uitstekend level.</em></p>
                                 {/if}
                             </td>
                         </tr>
